ingress-solana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solana-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: marisolvrs.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solana-rpc
            port:
              number: 80
